--- a/CityApp/Info.plist
+++ b/CityApp/Info.plist
@@ -4,5 +4,12 @@
 <dict>
 	<key>BASE_URL</key>
 	<string>https://gist.githubusercontent.com/hernan-uala/dce8843a8edbe0b0018b32e137bc2b3a/raw/0996accf70cb0ca0e16f9a99e0ee185fafca7af1/cities.json</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>SF-Pro-Display-Bold.otf</string>
+		<string>SF-Pro-Display-Medium.otf</string>
+		<string>SF-Pro-Display-Regular.otf</string>
+		<string>SF-Pro-Display-Semibold.otf</string>
+	</array>
 </dict>
 </plist>
