--- a/CityApp/Info.plist
+++ b/CityApp/Info.plist
@@ -6,10 +6,10 @@
 	<string>https://gist.githubusercontent.com/hernan-uala/dce8843a8edbe0b0018b32e137bc2b3a/raw/0996accf70cb0ca0e16f9a99e0ee185fafca7af1/cities.json</string>
 	<key>UIAppFonts</key>
 	<array>
-		<string>SF-Pro-Display-Bold.otf</string>
-		<string>SF-Pro-Display-Medium.otf</string>
-		<string>SF-Pro-Display-Regular.otf</string>
-		<string>SF-Pro-Display-Semibold.otf</string>
+		<string>SNPro-Bold.otf</string>
+		<string>SNPro-Semibold.otf</string>
+		<string>SNPro-Regular.otf</string>
+		<string>SNPro-Medium.otf</string>
 	</array>
 </dict>
 </plist>
